230323 로그인페이지, 회원가입 초기 구현

--- a/membercw/login.html
+++ b/membercw/login.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/test.css">
     <style>
-      h2{
+      h1{
         color:#776BFF;
         margin-top : 250px;
       }
@@ -27,7 +27,7 @@
 
     <div class="container-400">
       <div class="row center">
-          <h2>SEMI</h2>
+          <h1>SEMI</h>
         </div>
       <div class="row">
         <input type="text" name="memberId" required class="form-input w-100 medium light" placeholder="아이디" >
