--- a/membercw/join.html
+++ b/membercw/join.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="css/layout.css">
     <link rel="stylesheet" type="text/css" href="css/test.css">
       <style>
-      h1{
+      h2{
         color:#776BFF;
         margin-top : 100px;
       }
@@ -22,7 +22,7 @@
   function memberIdCheck(){
       //아이디 입력창에 작성된 글자를 가져와서 검사 후 메세지 출력
       var memberId = document.querySelector("[name=memberId]").value;
-      var memberIdRegex = /^^[a-z0-9-_]{5,20}$/;
+      var memberIdRegex = /^[a-z0-9-_]{5,20}$/;
 
       //var span = document.querySelector("[name=memberId] + span");
       var span = document.querySelector("[name=memberId]").nextElementSibling;
@@ -79,14 +79,13 @@
     <form autocomplete="off"></form>
     <div class="container-500">
         <div class="row center">
-            <h1>SEMI</h1>
+            <h2>SEMI</h2>
         </div>
         <div class="row">
             <label>아이디</label>
-            <input type="text" name="memberId" required 
-                placeholder="영문 소문자, 숫자 8~16자"
-                class="form-input w-100 medium light" onblur="memberIdCheck();">
-                <span></span>
+            <input type="text" name="memberId" required placeholder="영문 소문자, 숫자 8~16자"
+                class="form-input w-100 form-regex medium light" data-regex="^[a-z][a-z0-9]{7,19}$"
+                onblur="memberIdCheck();">
         </div>
         <div class="row">
           <label>닉네임</label>
